ajout client lours et css amelioré

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
 <!-- Section Veille Technologique -->
 <section id="veille-technologique" class="dynamic-section">
-    <h2>Veille Technologique : Minage de Cryptomonnaies</h2>
+    <h2>Veille Technologique : L'Impact de l'Intelligence Artificielle sur le Développement Logiciel</h2>
 
     <section>
         <h4>Qu'est-ce que la veille technologique ?</h4>
@@ -221,79 +221,51 @@
         <p>
             Ma veille technologique repose sur des outils variés. J'utilise :
             <ul>
-                <li><strong>Google Alerts</strong> : pour recevoir des mises à jour quotidiennes sur le minage de cryptomonnaies.</li>
-                <li><strong>Le Journal du Coin</strong> : un site spécialisé qui fournit des actualités et des analyses sur les cryptomonnaies.</li>
-                <li><strong>Reddit</strong> : notamment les forums spécialisés dans les discussions techniques sur le minage.</li>
+                <li><strong>Google Alerts</strong> : pour recevoir des mises à jour sur l'impact de l'IA dans le domaine du développement logiciel.</li>
+                <li><strong>Medium</strong> : une plateforme de blogs où des experts partagent leurs réflexions sur les technologies émergentes comme l'IA.</li>
+                <li><strong>Hacker News</strong> : un forum de discussion où les professionnels du développement logiciel échangent sur l'intégration de l'IA dans leurs pratiques.</li>
             </ul>
         </p>
     </section>
 
     <section>
-        <h4 style="text-align: center;">Thème 1 : Qu'est-ce que le minage de cryptomonnaies ?</h4>
+        <h4 style="text-align: center;">Thème 1 : Qu'est-ce que l'intelligence artificielle ?</h4>
         <p>
-            Le minage de cryptomonnaies est le processus par lequel les transactions réalisées sur une blockchain 
-            sont vérifiées et ajoutées à un registre public. Cela repose sur la résolution de problèmes mathématiques complexes 
-            par des machines spécialisées, appelées <strong>ASICs</strong> ou <strong>GPU</strong>. Les mineurs sont récompensés 
-            par des fractions de cryptomonnaie pour leur contribution à la sécurité et au bon fonctionnement du réseau.
+            L'intelligence artificielle (IA) désigne la capacité des machines à imiter les processus cognitifs humains, tels que l'apprentissage, la prise de décision, et la résolution de problèmes. Dans le développement logiciel, l'IA peut automatiser des tâches complexes, offrir des prédictions précises et améliorer l'efficacité des processus de développement.
         </p>
     </section>
 
     <section>
-        <h4 style="text-align: center;">Thème 2 : Les aspects techniques du minage</h4>
+        <h4 style="text-align: center;">Thème 2 : Les applications de l'IA dans le développement logiciel</h4>
         <p>
-            <strong>1. Algorithmes de consensus</strong><br/>
-            Les blockchains utilisent des algorithmes de consensus comme le <i>Proof of Work (PoW)</i>, 
-            où les mineurs doivent résoudre des équations complexes pour valider les blocs.
+            <strong>1. Automatisation des tests</strong><br/>
+            L'IA permet d'automatiser les tests logiciels, en analysant les comportements des applications et en détectant les anomalies avant la mise en production.
         </p>
         <p>
-            <strong>2. Puissance de calcul</strong><br/>
-            Le minage nécessite une grande puissance de calcul, ce qui implique l’utilisation d’équipements 
-            performants comme des ASICs ou des GPU haut de gamme.
+            <strong>2. Optimisation des performances</strong><br/>
+            Des algorithmes d'IA sont utilisés pour améliorer l'efficacité des applications en adaptant dynamiquement les ressources utilisées.
         </p>
         <p>
-            <strong>3. Consommation énergétique</strong><br/>
-            L’un des principaux défis du minage est sa consommation énergétique importante, 
-            avec des impacts écologiques significatifs. Certains projets explorent des alternatives 
-            plus durables, comme le <i>Proof of Stake (PoS)</i>.
+            <strong>3. Développement de code intelligent</strong><br/>
+            Des outils comme <i>GitHub Copilot</i> utilisent l'IA pour suggérer des lignes de code en fonction des contextes de développement, accélérant ainsi le processus de codage.
         </p>
     </section>
 
     <section>
-        <h4 style="text-align: center;">Thème 3 : Les applications et impacts du minage</h4>
+        <h4 style="text-align: center;">Thème 3 : Les impacts de l'IA sur le métier de développeur</h4>
         <p>
-            <strong>1. Sécurisation des réseaux</strong><br/>
-            Le minage est essentiel pour garantir la sécurité et la fiabilité des transactions sur une blockchain.
+            <strong>1. Réduction des tâches répétitives</strong><br/>
+            L'IA permet de libérer les développeurs des tâches répétitives, leur donnant plus de temps pour se concentrer sur des aspects créatifs et stratégiques du développement.
         </p>
         <p>
-            <strong>2. Opportunités financières</strong><br/>
-            Il permet aux mineurs de générer des revenus en participant activement au réseau, 
-            bien que les coûts initiaux puissent être élevés (matériel, électricité).
+            <strong>2. Évolution des compétences</strong><br/>
+            Les développeurs doivent désormais maîtriser des concepts d'IA et d'apprentissage automatique pour rester compétitifs dans un marché de plus en plus dominé par ces technologies.
         </p>
         <p>
-            <strong>3. Enjeux écologiques</strong><br/>
-            La consommation d’énergie massive pousse à une réflexion sur des solutions plus respectueuses de l’environnement.
+            <strong>3. Défis éthiques</strong><br/>
+            L'intégration de l'IA dans le développement logiciel soulève des questions éthiques, telles que la responsabilité des décisions prises par des systèmes automatisés.
         </p>
     </section>
-</section>
-
-<!-- Section contact -->
-<section id="contact" class="dynamic-section">
-    <h2>Contactez-moi</h2>
-    <form id="contact-form" onsubmit="sendEmail(event)">
-        <label for="name">Nom :</label>
-        <input type="text" id="name" name="name" required>
-
-        <label for="firstname">Prénom :</label>
-        <input type="text" id="firstname" name="firstname" required>
-
-        <label for="email">Email :</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="message">Message :</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
-
-        <button type="submit">Envoyer</button>
-    </form>
 </section>
 
 
