--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
     <h2>Missions</h2>
     <div style="display: flex; flex-direction: row; gap: 20px;">
         <section>
-            <p>Portfolio</p>
+            <img src="image/pf.png" alt="logoi Portfolio" width="123px"/>
+            <p style="text-align: center;">Portfolio</p>
+            <a href="page/portfolio.html" class="btn">En savoir plus</a>
         </section>
         <section>
             <p>Mission 2</p>
