ajout style btn + logo portfolio

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     Je maîtrise des langages comme JavaScript, Java, PHP, HTML, CSS...
     Mon objectif est de continuer à évoluer dans le domaine du développement.</p>
     <a href="image/Mamadou_CV.pdf" class="btn" target="_blank">Télécharger mon CV</a>
+    <a href="image/tabeau_synthese.xlsx" style= "margin-left: 72.3%;"class="btn" target="_blank">Tableau de synthèse</a>
 </section>
 
 <!-- BTS SIO -->
@@ -161,7 +162,7 @@
     <h2>Missions</h2>
     <div style="display: flex; flex-direction: row; gap: 20px;">
         <section>
-            <img src="image/pf.png" alt="logoi Portfolio" width="123px"/>
+            <img src="image/pf2.png" alt="logoi Portfolio" width="123px"/>
             <p style="text-align: center;">Portfolio</p>
             <a href="page/portfolio.html" class="btn">En savoir plus</a>
         </section>
