ajout tb synthèse

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     Je maîtrise des langages comme JavaScript, Java, PHP, HTML, CSS...
     Mon objectif est de continuer à évoluer dans le domaine du développement.</p>
     <a href="image/Mamadou_CV.pdf" class="btn" target="_blank">Télécharger mon CV</a>
-    <a href="image/tabeau_synthese.xlsx" style= "margin-left: 72.3%;"class="btn" target="_blank">Tableau de synthèse</a>
+    <a href="image/Tb_synthese_CISSOKHO_Mamadou.xlsx" style= "margin-left: 72.3%;"class="btn" target="_blank">Tableau de synthèse</a>
 </section>
 
 <!-- BTS SIO -->
