--- a/index.html
+++ b/index.html
@@ -271,7 +271,25 @@
     </section>
 </section>
 
+<!-- Section contact -->
+<section id="contact" class="dynamic-section">
+    <h2>Contactez-moi</h2>
+    <form id="contact-form" onsubmit="sendEmail(event)">
+        <label for="name">Nom :</label>
+        <input type="text" id="name" name="name" required>
 
+        <label for="firstname">Prénom :</label>
+        <input type="text" id="firstname" name="firstname" required>
+
+        <label for="email">Email :</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="message">Message :</label>
+        <textarea id="message" name="message" rows="5" required></textarea>
+
+        <button type="submit">Envoyer</button>
+    </form>
+</section>
 
 
 <footer>
