changement de cv

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <p>Étudiant en BTS SIO, spécialité SLAM, je combine le développement d'applications avec des compétences acquises lors de mon alternance chez Assurup et à l'école. 
     Je maîtrise des langages comme JavaScript, Java, PHP, HTML, CSS...
     Mon objectif est de continuer à évoluer dans le domaine du développement.</p>
-    <a href="image/CV_Mamadou_Cissokho_Stylisé.docx" class="btn" target="_blank">Télécharger mon CV</a>
+    <a href="image/Mamadou_Cv_DEV.pdf" class="btn" target="_blank">Télécharger mon CV</a>
     <a href="image/Tb_synthese_CISSOKHO_Mamadou.xlsx" style= "margin-left: 72.3%;"class="btn" target="_blank">Tableau de synthèse</a>
 </section>
 
